# ClassicWebAgent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.json
config/prompts/: perception.yaml  planner.yaml  verifier.yaml
docs/: action-space.md  architecture.md  design.md  diagrams.md  experiment-report.md  model-routing.md  pdf_content.json  perception-design.md  test-cases.md  test-standards.md
scripts/: benchmark.py  evaluate.py  init_login.py  run.py  run_test_cases.py  test-cases.yaml  test_perception_baidu.py  test_perception_hupu.py
src/classic_web_agent/: __init__.py  __main__.py  browser.py  config.py  llm.py  logger.py  main.py  skills.py
src/classic_web_agent/agent/: __init__.py  action.py  core.py  director.py  executor.py  memory.py  perception.py  planner.py  types.py  verifier.py
src/classic_web_agent/agent/prompts/: director.yaml  reporter.yaml
src/classic_web_agent/common/: action.py  memory.py  types.py
src/classic_web_agent/subagent/: __init__.py  core.py  executor.py  perception.py  planner.py  som.py  verifier.py
src/classic_web_agent/subagent/prompts/: planner.yaml
tests/: __init__.py  conftest.py  test_agent_core.py  test_browser.py  test_director.py  test_executor.py  test_llm.py  test_main.py  test_memory.py  test_perception.py  test_planner.py  test_subagent.py
